devel
-----

* Fixed a deadlock between AQL write transactions and hotbackup, since
  in AQL write transactions follower transactions did not know they are
  follower transactions.

* Added metrics for collection locks:
  - `arangodb_collection_lock_timeouts_exclusive`: Number of lock timeouts 
    when trying to acquire collection exclusive locks
  - `arangodb_collection_lock_timeouts_write`: Number of lock timeouts when 
    trying to acquire collection write locks
  - `arangodb_collection_lock_acquisition_micros`: Total amount of collection 
    lock acquisition time [μs]
  - `arangodb_collection_lock_acquisition_time`: Total collection lock 
    acquisition time histogram [s]

* Reduce lock timeout on followers to 15 seconds.
  Rationale: we should not have any locking conflicts on followers, generally. 
  Any shard locking should be performed on leaders first, which will then, 
  eventually replicate changes to followers. replication to followers is only 
  done once the locks have been acquired on the leader(s). 

* Fix a memory leak because cluster internal connections were not cleaned
  up for agency communication.

* Added compile option USE_JEMALLOC_PROF to enable memory profiling.

* Remove extra CMake option `DEBUG_SYNC_REPLICATION` and use the already
  existing `USE_FAILURE_TESTS` options for its purpose.

* Updated bundled version of Snappy compression/decompression library to 1.1.8.

* Fix REST API endpoint PUT `/_api/collection/<collection>/recalculateCount` on
  coordinators. Coordinators sent a wrong message body to DB servers here, so
  the request could not be handled properly.

* Fixed issue #12778: fails validation if additionalProperties: false.

* Fixed BTS-233 issue: Fixed invalid IndexId comparator.

* Fixed potential deadlock in cluster transactions if a transaction is
  returned that was soft-aborted by transaction garbage collection before.
  This deadlock should rarely ever occur in practice, as it can only be 